@@ -1,100 +1,144 @@
 package ru.yandex.practicum.filmorate.controller;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.mockito.InjectMocks;
+import org.mockito.Mock;
+import org.mockito.MockitoAnnotations;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
-import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.http.MediaType;
 import org.springframework.test.web.servlet.MockMvc;
+import org.springframework.test.web.servlet.setup.MockMvcBuilders;
 import ru.yandex.practicum.filmorate.model.User;
 import ru.yandex.practicum.filmorate.service.UserService;
 
-import java.util.List;
+import java.time.LocalDate;
+import java.util.Collections;
 
+import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.*;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
 
 @WebMvcTest(UserController.class)
-class UserControllerTest {
+public class UserControllerTest {
 
     @Autowired
     private MockMvc mockMvc;
 
-    @Autowired
-    private ObjectMapper objectMapper;
-
-    @MockBean
+    @Mock
     private UserService userService;
 
-    private User user;
+    @InjectMocks
+    private UserController userController;
+
+    private ObjectMapper objectMapper;
+
+    @BeforeEach
+    void setUp() {
+        MockitoAnnotations.openMocks(this);
+        mockMvc = MockMvcBuilders.standaloneSetup(userController).build();
+        objectMapper = new ObjectMapper();
+    }
 
     @Test
-    void shouldCreateUser() throws Exception {
+    void testGetAll() throws Exception {
+        User user = new User(1L, "user@example.com", "username", "User Name", LocalDate.of(1990, 1, 1));
+        when(userService.getAll()).thenReturn(Collections.singletonList(user));
+
+        mockMvc.perform(get("/users"))
+                .andExpect(status().isOk())
+                .andExpect(content().contentType(MediaType.APPLICATION_JSON))
+                .andExpect(jsonPath("$[0].id").value(user.getId()))
+                .andExpect(jsonPath("$[0].email").value(user.getEmail()))
+                .andExpect(jsonPath("$[0].login").value(user.getLogin()))
+                .andExpect(jsonPath("$[0].name").value(user.getName()))
+                .andExpect(jsonPath("$[0].birthday").value(user.getBirthday().toString()));
+    }
+
+    @Test
+    void testCreate() throws Exception {
+        User user = new User(1L, "user@example.com", "username", "User Name", LocalDate.of(1990, 1, 1));
         when(userService.save(any(User.class))).thenReturn(user);
 
         mockMvc.perform(post("/users")
                         .contentType(MediaType.APPLICATION_JSON)
                         .content(objectMapper.writeValueAsString(user)))
                 .andExpect(status().isCreated())
+                .andExpect(content().contentType(MediaType.APPLICATION_JSON))
                 .andExpect(jsonPath("$.id").value(user.getId()))
-                .andExpect(jsonPath("$.name").value(user.getName()));
+                .andExpect(jsonPath("$.email").value(user.getEmail()))
+                .andExpect(jsonPath("$.login").value(user.getLogin()))
+                .andExpect(jsonPath("$.name").value(user.getName()))
+                .andExpect(jsonPath("$.birthday").value(user.getBirthday().toString()));
     }
 
     @Test
-    void shouldUpdateUser() throws Exception {
+    void testUpdate() throws Exception {
+        User user = new User(1L, "user@example.com", "username", "User Name", LocalDate.of(1990, 1, 1));
         when(userService.update(any(User.class))).thenReturn(user);
 
         mockMvc.perform(put("/users")
                         .contentType(MediaType.APPLICATION_JSON)
                         .content(objectMapper.writeValueAsString(user)))
                 .andExpect(status().isOk())
+                .andExpect(content().contentType(MediaType.APPLICATION_JSON))
                 .andExpect(jsonPath("$.id").value(user.getId()))
-                .andExpect(jsonPath("$.name").value(user.getName()));
+                .andExpect(jsonPath("$.email").value(user.getEmail()))
+                .andExpect(jsonPath("$.login").value(user.getLogin()))
+                .andExpect(jsonPath("$.name").value(user.getName()))
+                .andExpect(jsonPath("$.birthday").value(user.getBirthday().toString()));
     }
 
     @Test
-    void shouldReturnAllUsers() throws Exception {
-        when(userService.getAll()).thenReturn(List.of(user));
+    void testAddFriend() throws Exception {
+        doNothing().when(userService).addFriend(1L, 2L);
 
-        mockMvc.perform(get("/users"))
-                .andExpect(status().isOk())
-                .andExpect(jsonPath("$[0].id").value(user.getId()))
-                .andExpect(jsonPath("$[0].name").value(user.getName()));
-    }
-
-    @Test
-    void shouldAddFriend() throws Exception {
         mockMvc.perform(put("/users/1/friends/2"))
                 .andExpect(status().isOk());
+
         verify(userService, times(1)).addFriend(1L, 2L);
     }
 
     @Test
-    void shouldDeleteFriend() throws Exception {
+    void testDeleteFriend() throws Exception {
+        doNothing().when(userService).deleteFriend(1L, 2L);
+
         mockMvc.perform(delete("/users/1/friends/2"))
                 .andExpect(status().isOk());
+
         verify(userService, times(1)).deleteFriend(1L, 2L);
     }
 
     @Test
-    void shouldReturnFriends() throws Exception {
-        when(userService.getFriends(1L)).thenReturn(List.of(user));
+    void testGetFriends() throws Exception {
+        User user = new User(1L, "friend@example.com", "friendname", "Friend Name", LocalDate.of(1990, 1, 1));
+        when(userService.getFriends(1L)).thenReturn(Collections.singletonList(user));
 
         mockMvc.perform(get("/users/1/friends"))
                 .andExpect(status().isOk())
+                .andExpect(content().contentType(MediaType.APPLICATION_JSON))
                 .andExpect(jsonPath("$[0].id").value(user.getId()))
-                .andExpect(jsonPath("$[0].name").value(user.getName()));
+                .andExpect(jsonPath("$[0].email").value(user.getEmail()))
+                .andExpect(jsonPath("$[0].login").value(user.getLogin()))
+                .andExpect(jsonPath("$[0].name").value(user.getName()))
+                .andExpect(jsonPath("$[0].birthday").value(user.getBirthday().toString()));
     }
 
     @Test
-    void shouldReturnCommonFriends() throws Exception {
-        when(userService.getCommonFriends(1L, 2L)).thenReturn(List.of(user));
+    void testGetCommonFriends() throws Exception {
+        User user = new User(2L, "commonfriend@example.com", "commonfriend", "Common Friend", LocalDate.of(1990, 1, 1));
+        when(userService.getCommonFriends(1L, 2L)).thenReturn(Collections.singletonList(user));
 
         mockMvc.perform(get("/users/1/friends/common/2"))
                 .andExpect(status().isOk())
+                .andExpect(content().contentType(MediaType.APPLICATION_JSON))
                 .andExpect(jsonPath("$[0].id").value(user.getId()))
-                .andExpect(jsonPath("$[0].name").value(user.getName()));
+                .andExpect(jsonPath("$[0].email").value(user.getEmail()))
+                .andExpect(jsonPath("$[0].login").value(user.getLogin()))
+                .andExpect(jsonPath("$[0].name").value(user.getName()))
+                .andExpect(jsonPath("$[0].birthday").value(user.getBirthday().toString()));
     }
 }
